--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
 
                                     <p>If you have any questions (or just want to say hi), please <a href="#">contact me</a>!</p>
 
-									<h3 class="major">Vitae phasellus</h3>
+									<!-- <h3 class="major">Vitae phasellus</h3>
 									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
 
 									<section class="features">
@@ -82,7 +82,7 @@
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
-									</section>
+									</section> -->
 
 								</div>
 							</div>
