--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 							<a href="#menu">Menu</a>
 						</nav>
 					</header>
+			<!-- Blur layer -->
+				<div id="blur-layer" class="blur>
 
 				<!-- Menu -->
 					<nav id="menu">
@@ -171,7 +173,7 @@
 							</ul>
 						</div>
 					</section>
-
+				</div>
 			</div>
 
 		<!-- Scripts -->
