blur: Fix index.html

--- a/index.html
+++ b/index.html
@@ -24,8 +24,6 @@
 							<a href="#menu">Menu</a>
 						</nav>
 					</header>
-			<!-- Blur layer -->
-				<div id="blur-layer" class="blur>
 
 				<!-- Menu -->
 					<nav id="menu">
@@ -52,6 +50,8 @@
 						</div>
 					</section>
 
+			<!-- Blur layer -->
+				<div id="blur-layer" class="blur">
 				<!-- Wrapper -->
 					<section id="wrapper">
 
